--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-three/drei": "^9.99.4",
     "@react-three/fiber": "^8.15.16",
     "@react-three/offscreen": "^0.0.8",
-    "next": "^14.1.1",
+    "next": "^14.1.1-canary.82",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.161.0"
